                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Added ToggleButton, PushButton and CustomButton (thanks to khiraly)

 * Added means to return and call functions from another function call
   (added by Kees)

 * Added means to derive classes from classes in other modules
   e.g. from module import parent; class child(parent): pass
   (thanks to Kees Bos).

 * Added class "Zero args" support (thanks to Kees Bos).
   TODO: support runtime exceptions when number of function
   call arguments is wrong, as illustrated in the new LibTest.

 * Added Multiple Inheritance (thanks to Kees Bos)

 * Add support for Google Gears (Database)

 * Completed DisclosurePanel port 


                    Changes made to Pyjamas since 0.5
                    ---------------------------------

 * Fixed Autocompletion which just needed non-modal on PopupPanel
   (thanks to lovelysystems for implementing non-modal dialogs
    otherwise it wouldn't be possible to fix Autocompletion)

 * Added implementation of metaclass "type" function

 * Made KeyboardListener a singleton module rather than have a class
   named the same as the module.  Likewise with MouseListener, Event
   and Focus.

 * Added Right-clickable Context Menus, and added an example in KitchenSink
   Menus.py to show how to set them up.

 * Added python-spidermonkey as an experimental platform, exactly like
   pyv8run.py now there is pysmrun.py

 * Top-level global variables, and top-level functions, now
   correctly scope in a module (thanks to Jose for raising this one)

 * String constants are now returned as instances of String()
   which results in them having the __iter__ method that has
   been added to the proto of the javascript base String type.

 * made TypeError inherit from BaseException rather than being a
   javascript proto from Error().  TypeError can now be raised
   as an Exception, with a message.
